@@ -6,6 +6,8 @@
 
 * Changed FileMagic#io to optionally rewind input afterwards.
 * New method FileMagic.library_version (+magic_version+).
+* New method FileMagic#descriptor (+magic_descriptor+).
+* New method FileMagic#fd.
 * Added new constants from file 5.23.
 
 == 0.6.3 [2015-02-06]
